# libvec

./: CMakeLists.txt  Makefile
inc/: libvec.h
src/: vec_add.c  vec_angle.c  vec_cross_product.c  vec_dist.c  vec_dot_product.c  vec_magnitude.c  vec_mul.c  vec_opposite.c  vec_set.c  vec_set_v.c  vec_sub.c  vec_unit.c
